# open62541_ua_server

./: CMakeLists.txt  Dockerfile  Makefile  Opc.Ua.MTConnect.NodeSet2.Part1.xml  README.md  agenthandler.cpp  agenthandler.h  example.cfg  httpreader.cpp  httpreader.h  makeIds.sh  makens.sh  maketype.sh  mtconnect_ids.cpp  mtconnect_ids.h  mteuInfo.h  nodeset.cpp  opcua.cfg  opcua_server.cpp  settings.cpp  settings.h  types_mgr.cpp  types_mgr.h  types_mtconnect_generated.cpp  types_mtconnect_generated.h  types_mtconnect_generated_encoding_binary.h  types_mtconnect_generated_handling.h  util.cpp  util.h  worker.cpp  worker.h
binaries/Ubuntu/: README.md
binaries/Windows/: README.md
cmake/: open62541.cmake
